# Qazaq42

./: .flake8  .gitignore  README.md  docker-compose.yml
ai/: .dockerignore  .env  Dockerfile  README.md  pyproject.toml
ai/app/: main.py
ai/app/api/: __init__.py
ai/app/core/: config.py  lifespan.py  middleware.py
ai/app/models/: crop.py
ai/data/raw/: preprocessed_data.csv  raw_data.csv
ai/ml_models/: label_encoder.joblib
ai/services/: logging.py  logging_config.py  predict.py
backend/: .env  .env.development  Dockerfile  README.md  pyproject.toml  run.py
backend/app/: main.py
backend/app/api/: __init__.py
backend/app/core/: __init__.py  caching.py  config.py  container.py  database.py  dependencies.py  middleware.py  redis.py  security.py
backend/app/models/: __init__.py  country.py  crop_report.py  device.py  district.py  field.py  order.py  report.py  telemetry.py  user.py
backend/app/repositories/: __init__.py  country.py  crop_report.py  device.py  district.py  field.py  order.py  report.py  telemetry.py  user.py
backend/app/schemas/: country.py  crop_report.py  device.py  district.py  field.py  telemetry.py  user.py
backend/app/services/: __init__.py  ai_integration.py  auth.py  country.py  crop_report.py  crop_report_service.py  device.py  district.py  field.py  order.py  report.py  telemetry.py  token.py  user.py
backend/app/utils/: hash.py
backend/config/: config.py  settings.py
backend/keys/: private.pem  public.pem
backend/migrations/: env.py
backend/migrations/versions/: 2024_11_07_1230-f6cc9d8d6629_initial_migration.py  (+15 more)
(+133 files in other folders)
