[tool.poetry]
name = "ai"
version = "0.1.0"
description = ""
authors = ["samiribrh <samiribrahimov2277@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
imbalanced-learn = "^0.12.4"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
joblib = "^1.4.2"
fastapi = "^0.115.2"
uuid = "^1.30"
uvicorn = "^0.31.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
