[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["samiribrh <samiribrahimov2277@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flake8 = "^7.1.1"
fastapi = "^0.115.0"
alembic = "^1.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
