[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["samiribrh <samiribrahimov2277@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flake8 = "^7.1.1"
fastapi = "^0.115.0"
alembic = "^1.13.2"
python-dotenv = "^1.0.1"
pydantic = "^2.9.2"
sqlmodel = "^0.0.22"
sqlalchemy = "^2.0.35"
cryptography = "^43.0.1"
uvicorn = "^0.31.0"
wireup = "^0.9.2"
pydantic-settings = "^2.5.2"
toml = "^0.10.2"
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
